# ragglet

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/indexes/: demo.yaml
configs/scenarios/: baseline_qdrant.yaml  baseline_qdrant_fanout_two_vec.yaml
data/queries/: baseline_qdrant.jsonl
datasets/demo/corpus/: async_retrieval_fanout_gather_timeouts.md  benchmarking_rag_load_testing_and_experiment_design.md  caching_strategies_embedding_cache_retrieval_cache.md  chunking_context_assembly_templates_with_citations.md  chunking_deduplication_and_near_duplicate_handling.md  chunking_document_structure_parsing_html_pdf.md  chunking_overlap_tradeoffs_and_guidelines.md  chunking_recursive_vs_semantic_chunking.md  distributed_rag_architectures_multi_index_routing.md  distributed_systems_sharding_replication_consistent_hashing.md  embeddings_batching_latency_and_throughput.md  embeddings_drift_versioning_and_reindexing.md  embeddings_models_normalization_and_similarity_metrics.md  embeddings_multilingual_and_domain_specific_models.md  embeddings_vector_dimensions_and_storage_costs.md  (+34 more)
docker/: docker-compose.yaml
results/: async_rerank_cache_20260220T183040Z.csv  async_rerank_cache_20260220T183040Z.summary.json  baseline_qdrant_20260220T183343Z.csv  baseline_qdrant_20260220T183343Z.summary.json  baseline_qdrant_20260220T183459Z.csv  baseline_qdrant_20260220T183459Z.summary.json  baseline_qdrant_20260221T132136Z.csv  baseline_qdrant_20260221T132136Z.summary.json  baseline_qdrant_20260221T132554Z.csv  baseline_qdrant_20260221T132554Z.summary.json
(+31 files in other folders)
